--- a/font.html
+++ b/font.html
@@ -65,7 +65,7 @@ body {
 	</div>
 </div>
 <div>
-	<h3>■ "Helvetica Neue", Segoe UI, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo】</h3>
+	<h3>■ "Helvetica Neue", Segoe UI, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo</h3>
 	<div id="Helvetica" class="text">
 		<p>Hello World ! ★ English ★ 12345</p>
 		<p>あいうえおかきくけこさしすせそ</p>
