--- a/font.html
+++ b/font.html
@@ -17,12 +17,15 @@ body {
 }
 #Noto-Sans-JP {
 	font-family: 'Noto Sans JP', sans-serif;
+	font-weight: 400;
 }
 #Noto-Serif-JP {
 	font-family: 'Noto Serif JP', sans-serif;
+	font-weight: 400;
 }
 #Sawarabi-Mincho {
 	font-family: 'Sawarabi Mincho', Helvetica, Arial, sans-serif;
+	font-weight: 400;
 }
 #Helvetica {
 	font-family: "Helvetica Neue", Segoe UI, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
