--- a/font.html
+++ b/font.html
@@ -7,8 +7,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 <style>
 body {
@@ -21,6 +22,10 @@ body {
 }
 #Noto-Serif-JP {
 	font-family: 'Noto Serif JP', sans-serif;
+	font-weight: 400;
+}
+#Sawarabi-Gothic {
+	font-family: 'Sawarabi Gothic', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 }
 #Sawarabi-Mincho {
@@ -43,6 +48,14 @@ body {
 <div>
 	<h3>■ Google Fonts：Noto Sans JP</h3>
 	<div id="Noto-Sans-JP" class="text">
+		<p>Hello World ! ★ English ★ 12345</p>
+		<p>あいうえおかきくけこさしすせそ</p>
+		<p>祇園精舍の鐘の声、諸行無常の響きあり。</p>
+	</div>
+</div>
+<div>
+	<h3>■ Google Fonts：Sawarabi Gothic</h3>
+	<div id="Sawarabi-Gothic" class="text">
 		<p>Hello World ! ★ English ★ 12345</p>
 		<p>あいうえおかきくけこさしすせそ</p>
 		<p>祇園精舍の鐘の声、諸行無常の響きあり。</p>
